# Identy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang15faillog.txt  gpp12faillog.txt
.github/workflows/: tests.yml
Identy/: CMakeLists.txt  Identy.h  Identy_global.h  Identy_hash.cxx  Identy_hash.hxx  Identy_hash_base.hxx  Identy_hwid.cxx  Identy_hwid.hxx  Identy_io.cxx  Identy_io.hxx  Identy_nvme_support.hxx  Identy_pch.hxx  Identy_platform.hxx  Identy_resource_handle.hxx  Identy_sha256.cxx  Identy_sha256.hxx  Identy_string.cxx  Identy_strings.hxx  Identy_types.hxx  Identy_vm.cxx  Identy_vm.hxx  pch.hxx
Identy/Platform/: CMakeLists.txt  Identy_hwid_pltimpl_linux.cxx  Identy_hwid_pltimpl_windows.cxx  Identy_platform_hwid.hxx  Identy_platform_vm.hxx  Identy_vm_pltimpl_linux.cxx  Identy_vm_pltimpl_windows.cxx
tests/: CMakeLists.txt  test_config.hxx  test_hash.cxx  test_hwid.cxx  test_integration.cxx  test_io.cxx  test_main.cxx  test_strings.cxx  test_vm_detection.cxx
